Se añaden funcionalidades de la sala de partida

--- a/CodeNamesClientSide.csproj
+++ b/CodeNamesClientSide.csproj
@@ -130,6 +130,9 @@
     <Compile Include="Windows\GameConfigurationMenuWindow.xaml.cs">
       <DependentUpon>GameConfigurationMenuWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\JoinRoomWindow.xaml.cs">
+      <DependentUpon>JoinRoomWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\LogInWindow.xaml.cs">
       <DependentUpon>LogInWindow.xaml</DependentUpon>
     </Compile>
@@ -162,6 +165,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\GameConfigurationMenuWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\JoinRoomWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
