--- a/CodeNamesClientSide.csproj
+++ b/CodeNamesClientSide.csproj
@@ -114,7 +114,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="MusicManager.cs" />
+    <Compile Include="Utilities\MusicManager.cs" />
     <Compile Include="Utilities\Friend.cs" />
     <Compile Include="Utilities\PasswordEncryptor.cs" />
     <Compile Include="Utilities\Player.cs" />
